<?xml version="1.0"?>
<package format="2">
  <name>rans_ros</name>
  <version>0.0.0</version>
  <description>The rans_ros package</description>

  <maintainer email="kamohara.junnosuke.t6@dc.tohoku.ac.jp">Junnosuke Kamohara</maintainer>

  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>